[package]
name = "bbex-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.3"
hyper = { version = "1.1.0", features = ["client"] }
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde = "1.0.197"
serde_json = "1.0.114"
shuttle-axum = "0.39.0"
shuttle-runtime = "0.39.0"
tokio = "1.28.2"
tracing = "0.1.40"
